💄 Fix overlap between pre-h1 and h1 on mobile (Fixes #40)

--- a/src/style.styl
+++ b/src/style.styl
@@ -430,7 +430,8 @@ body
 		background red
 
 .pre-h1
-	margin-bottom -2rem
+	@media (min-width 1000px)
+		margin-bottom -1.5rem
 	text-align center
 	font-size 1.2rem
 	opacity 0.5
